--- a/src/pages/Models/_models.scss
+++ b/src/pages/Models/_models.scss
@@ -21,7 +21,7 @@
 
   tr {
     display: grid;
-    grid-template-columns: 1fr 0.6fr 0.75fr 1.15fr 1fr 0.5fr 0.65fr;
+    grid-template-columns: 1fr 0.6fr 1fr 1.15fr 1fr 0.5fr 0.65fr;
   }
 
   .cloud-group tr {
